# vbase

./: CMakeLists.txt  README.md  make_with_jemalloc.sh  make_without_jemalloc.sh
.github/actions/ubuntu_18_setup/: action.yml
.github/workflows/: LinuxRelease.yml  WindowsRelease.yml
extension/: extension_config.cmake
extension/hadoopfs/: CMakeLists.txt  HDFSConfig.cmake  hadoopfs.cpp  hadoopfs_config.py  hadoopfs_extension.cpp  vcpkg.json
extension/hadoopfs/include/: hadoopfs.hpp
src/common/: file_system.cpp
src/include/duckdb/main/: extension_entries.hpp
src/main/extension/: extension_alias.cpp  extension_helper.cpp  extension_install.cpp  extension_load.cpp
tools/shell/: shell.c
